sourceSets {
  java20 {
    java {
      srcDirs = ['src/main/java20']
    }
  }
}

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
  
  withJavadocJar()
  withSourcesJar()
}

compileJava20Java {
  sourceCompatibility = JavaVersion.VERSION_20
  targetCompatibility = JavaVersion.VERSION_20
  
  options.compilerArgs << '--enable-preview'
}

jar {
  into('META-INF/versions/20') {
    from sourceSets.java20.output
  }
  manifest.attributes('Multi-Release': 'true')
}

dependencies {
  annotationProcessor projects.purefunProcessor
  api projects.purefunAnnotation
  api libs.pcollections
}
